<resources>
    <string name="app_name">Project2</string>
    <string name="menu_option_1">Clear all data</string>
    <string name="menu_option_2">Add data</string>
    <string name="brand_text_view" />
    <string name="model_text_view" />
    <string name="fab_description">Add new phone</string>
    <string name="model_label">Model</string>
    <string name="manufacturer_label">Manufacturer</string>
    <string name="android_version_label">Android version</string>
    <string name="website_label">Website</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="web_site_button_text">Website</string>
    <string name="update_button_text">Update</string>
</resources>